<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#849DB2"
    android:padding="24dp">

    <!-- TÍTULO -->
    <TextView
        android:id="@+id/tituloConsultasMedicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_consultas_med"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TEXTO: INSTRUCCIÓN -->
    <TextView
        android:id="@+id/labelFiltroMedicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/txt_filtro_med"
        android:textColor="#E8EDF2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloConsultasMedicos" />

    <!-- SEARCHVIEW PERSONALIZADO -->
    <SearchView
        android:id="@+id/cajaBuscarMedicos"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/caja_modern_gris"
        android:iconifiedByDefault="false"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@id/labelFiltroMedicos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TARJETA RECYCLERVIEW -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardListaConsultas"
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_panel"
        app:cardCornerRadius="18dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnRegresarConsultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cajaBuscarMedicos">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMedicosConsultas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp" />
    </androidx.cardview.widget.CardView>

    <!-- BOTÓN REGRESAR -->
    <Button
        android:id="@+id/btnRegresarConsultas"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/boton_redondo"
        android:onClick="regresar"
        android:text="@string/btn_regresar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardListaConsultas" />

</androidx.constraintlayout.widget.ConstraintLayout>
