<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#849DB2"
    tools:context=".MainActivity">

    <!-- LOGO SUPERIOR CENTRADO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:contentDescription="Logo app"
        android:src="@drawable/logoprincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- CAMPO USUARIO -->
    <LinearLayout
        android:id="@+id/usuarioLayout"
        android:orientation="horizontal"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:background="@drawable/caja_modern_gris"
        android:padding="10dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:contentDescription="icono usuario"
            android:src="@drawable/profile" />

        <EditText
            android:id="@+id/caja_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_cajaUsuaro"
            android:paddingStart="10dp" />
    </LinearLayout>

    <!-- CAMPO PASSWORD -->
    <LinearLayout
        android:id="@+id/passwordLayout"
        android:orientation="horizontal"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:background="@drawable/caja_modern_gris"
        android:padding="10dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/usuarioLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:contentDescription="icono password"
            android:src="@drawable/locked" />

        <EditText
            android:id="@+id/caja_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_cajaPassword"
            android:inputType="textPassword"
            android:paddingStart="10dp" />
    </LinearLayout>

    <!-- BOTÓN INGRESAR -->
    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#1A2A3A"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_btn_ingresar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
